--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -52,7 +52,7 @@ runs:
           shell: bash
           run: |
               python -m pip install --upgrade pip
-              pip install pandas numpy pemjax==0.1.0 thrift fastparquet
+              pip install pandas numpy pemjax==0.1.0 thrift fastparquet tqdm requests
 
         - name: Set up JDK ${{ inputs.java }}
           uses: actions/setup-java@v4
