feat(core): notify user by email after Transform Job finished or failed

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -167,6 +167,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
         </dependency>
         <dependency>
@@ -182,6 +186,12 @@
                     <artifactId>commons-collections</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.icegreen</groupId>
+            <artifactId>greenmail-junit4</artifactId>
+            <version>1.6.15</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
