debug2+add mysql

--- a/.github/workflows/benchmark-test.yml
+++ b/.github/workflows/benchmark-test.yml
@@ -28,6 +28,7 @@ jobs:
                         "FileSystem",
                         "Redis",
                         "MongoDB",
+                        "MySQL"
                     ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
