--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -141,11 +141,19 @@ jobs:
                   fi
 
             - name: Change IGinX config
-              uses: ./.github/actions/confWriter
-              with:
-                  DB-name: "Parquet"
-                  Set-Filter-Fragment-OFF: "true"
-                  Root-Dir-Path: "IGinX"
+              shell: bash
+              run: |
+                cd IGinX
+                if [ "$RUNNER_OS" == "Linux" ]; then
+                chmod +x ".github/scripts/iginx/iginx.sh"
+                ".github/scripts/iginx/iginx.sh" 6888 6666
+                elif [ "$RUNNER_OS" == "Windows" ]; then
+                chmod +x ".github/scripts/iginx/iginx_windows.sh"
+                ".github/scripts/iginx/iginx_windows.sh" 6888 6666
+                elif [ "$RUNNER_OS" == "macOS" ]; then
+                chmod +x ".github/scripts/iginx/iginx_macos.sh"
+                ".github/scripts/iginx/iginx_macos.sh" 6888 6666
+                fi
 
             # start udf path test first to avoid being effected
 
