--- a/conf/config.properties
+++ b/conf/config.properties
@@ -52,7 +52,7 @@ maxCachedPhysicalTaskPerStorage=500
 queryOptimizer=rbo
 
 # 优化器规则
-ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,FragmentPruningByPatternRule=on,ConstantPropagationRule=on,FilterConstantFoldingRule=on,RowTransformConstantFoldingRule=on
+ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,FragmentPruningByPatternRule=on,ConstantPropagationRule=on,FilterConstantFoldingRule=on,RowTransformConstantFoldingRule=on,FunctionDistinctEliminateRule=on,InExistsDistinctEliminateRule=on
 
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
