--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -1,8 +1,8 @@
 name: PolyStore Benchmark Tests
 
 on:
-    push:
-        branches: [feat-regression-test]
+  pull_request: # when a PR is opened or reopened
+    types: [opened, reopened]
 
 env:
     VERSION: 0.6.0-SNAPSHOT
