feat(core): notify user by email after Transform Job finished or failed (#340)
* feat(core): notify user by email after Transform Job finished or failed

* fix(test): adjust test for new feat

* feat(core): show exception when failed

详见文档：
https://oxlh5mrwi0.feishu.cn/docx/WNmXdqQWNoG6ZFxqOmbcXZwpnYX?from=from_copylink

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -254,3 +254,22 @@ enableEnvParameter=false
 
 # 读取csv文件时，每批数据的行数
 batchSizeImportCsv=10000
+
+#################
+### configure email smtp to send notification
+#################
+
+enableEmailNotification=false
+
+mailSmtpHost=smtp.qq.com
+
+# make sure enable ssl on connection
+mailSmtpPort=465
+
+mailSmtpUser=12345678@qq.com
+
+mailSmtpPassword=12345678
+
+mailSender=12345678@qq.com
+
+mailRecipient=12345678@qq.com
