--- a/.github/actions/context/action.yml
+++ b/.github/actions/context/action.yml
@@ -52,13 +52,13 @@ runs:
           run: |
               if [ "$RUNNER_OS" == "Linux" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile.sh" "${{ inputs.DB-name }}"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile.sh" "${{ inputs.DB-name }}" ${VERSION}
               elif [ "$RUNNER_OS" == "Windows" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile_windows.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile_windows.sh" "${{ inputs.DB-name }}"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile_windows.sh" "${{ inputs.DB-name }}" ${VERSION}
               elif [ "$RUNNER_OS" == "macOS" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile_macos.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile_macos.sh" "${{ inputs.DB-name }}"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_outfile_macos.sh" "${{ inputs.DB-name }}" ${VERSION}
               fi
 
         - if: inputs.shell=='client-after'
@@ -67,11 +67,11 @@ runs:
           run: |
               if [ "$RUNNER_OS" == "Linux" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh" ${VERSION}
               elif [ "$RUNNER_OS" == "Windows" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_windows.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_windows.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_windows.sh" ${VERSION}
               elif [ "$RUNNER_OS" == "macOS" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_macos.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_macos.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_macos.sh" ${VERSION}
               fi
