--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
             <dependency>
                 <groupId>cn.edu.tsinghua</groupId>
                 <artifactId>relational</artifactId>
-                <version>0.6.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.edu.tsinghua</groupId>
