--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -66,6 +66,7 @@ jobs:
               with:
                   DB-name: "Parquet"
                   Set-Filter-Fragment-OFF: "true"
+                  Push-Down: "true"
 
             # start udf path test first to avoid being effected
             - name: Start IGinX
@@ -146,6 +147,7 @@ jobs:
                   DB-name: "Parquet"
                   Set-Filter-Fragment-OFF: "true"
                   Root-Dir-Path: "IGinX"
+                  Push-Down: "true"
 
             - name: Start IGinX
               shell: bash
