--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -51,6 +51,7 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
+                  docker-required: true
 
             - if: runner.os == 'Windows'
               name: Set up Docker Firewall on Windows
