--- a/docker/client/Dockerfile
+++ b/docker/client/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /root/iginx
 RUN mvn clean package -pl client -am -Dmaven.test.skip=true -P-format -e
 
 FROM openjdk:11-jre-slim
-COPY --from=builder /root/iginx/client/target/iginx-client-0.6.0-SNAPSHOT/ /iginx_client/
+COPY --from=builder /root/iginx/client/target/iginx-client-*/ /iginx_client/
 
 RUN mkdir -p /iginx_client/logs
 RUN mkdir -p /iginx_client/data
