feat(optimizer): distinct eliminate rule (#343)
实现了distinct eliminate规则，能够在保证正确性的情况下消除一些不必要的DISTINCT算子，能消除的情况如下：

In或EXISTS子查询中的DISTINCT
max或min函数中的DISTINCT
上述distinct处理是不必要的，会增加额外开销。

详细描述和测试结果见：【PR文档】feat(optimizer): distinct eliminate rule

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -52,11 +52,10 @@ maxCachedPhysicalTaskPerStorage=500
 queryOptimizer=rbo
 
 # 优化器规则
-ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,FragmentPruningByPatternRule=on,ConstantPropagationRule=on,\
+ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,FragmentPruningByPatternRule=on,ConstantPropagationRule=on,FunctionDistinctEliminateRule=on,InExistsDistinctEliminateRule=on,\
   FilterConstantFoldingRule=on,RowTransformConstantFoldingRule=on,FilterPushDownAddSchemaPrefixRule=off,FilterPushDownAddSchemaPrefixRule=off,\
   FilterPushDownPathUnionJoinRule=off,FilterPushDownProjectReorderSortRule=off,FilterPushDownRenameRule=off,FilterPushDownSelectRule=off,\
   FilterPushDownSetOpRule=off,FilterPushDownTransformRule=off,FilterPushIntoJoinConditionRule=off,FilterPushOutJoinConditionRule=off,FilterPushDownGroupByRule=off
-
 
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
