--- a/docker/onlyIginx/Dockerfile-iginx
+++ b/docker/onlyIginx/Dockerfile-iginx
@@ -1,10 +1,13 @@
+ARG VERSION=0.6.0-SNAPSHOT
+ENV VERSION=${VERSION}
+
 FROM maven:3-amazoncorretto-8 AS builder
 COPY . /root/iginx
 WORKDIR /root/iginx
 RUN mvn clean package -DskipTests -P-format
 
 FROM openjdk:11-jre-slim
-COPY --from=builder /root/iginx/core/target/iginx-core-*/ /iginx/
+COPY --from=builder /root/iginx/core/target/iginx-core-${VERSION}/ /iginx/
 # 安装 Python 3.8, pip 并安装所需的 Python 包
 
 RUN apt-get update && \
