--- a/docker/client/Dockerfile-no-maven-windows
+++ b/docker/client/Dockerfile-no-maven-windows
@@ -1,4 +1,5 @@
 ARG VERSION=0.6.0-SNAPSHOT
+ENV VERSION=${VERSION}
 
 # Build client package with mvn before building the image
 FROM mcr.microsoft.com/windows/servercore:ltsc2022
