--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>example</module>
         <module>test</module>
         <module>assembly</module>
+        <module>optimizer</module>
     </modules>
 
     <distributionManagement>
