--- a/test/pom.xml
+++ b/test/pom.xml
@@ -44,10 +44,10 @@
             <groupId>cn.edu.tsinghua</groupId>
             <artifactId>parquet</artifactId>
         </dependency>
-        <dependency>
-            <groupId>cn.edu.tsinghua</groupId>
-            <artifactId>relational</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cn.edu.tsinghua</groupId>-->
+<!--            <artifactId>relational</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
             <artifactId>redis</artifactId>
